syntax = "proto3";

package api.status.v1beta1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/driverscooperative/geosrv/internal/idl/api/status/v1beta1";

service UptimeService {
  rpc GetUptime(GetUptimeRequest) returns (GetUptimeResponse) {}
}

message GetUptimeRequest {}

message GetUptimeResponse {
  int64 uptime = 1;
  google.protobuf.Timestamp started = 2;
}
